--- a/python/examples/gdc_notebook.ipynb
+++ b/python/examples/gdc_notebook.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of Data Objects: 0 \n"
+      "Number of Data Objects: 1515 \n"
      ]
     }
    ],
@@ -83,14 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "url: https://api.gdc.cancer.gov/data/8ecfa039-cd6a-4c1a-822c-a1fca0763c3f, file_size (B): 519261\n"
+      "url: https://api.gdc.cancer.gov/data/4221fb8c-44e6-4e2a-9207-d8868cfb6ce5, file_size (B): 253864\n"
      ]
     }
    ],
@@ -116,14 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of public Data Objects: 3045\n"
+      "Number of public Data Objects: 705\n"
      ]
     }
    ],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,9 +172,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'118933b6-86c7-4668-9973-424ece352a60.htseq.counts.gz'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "download_file(public_data_object.urls[0].url, data_object.name)"
    ]
@@ -195,14 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ga4ghChecksum(checksum=u'e88715863824b6a714a90d7ca340916a', type=u'md5')]\n"
+      "[ga4ghChecksum(checksum=u'17b0e94c31294d25b8788ef3132693e7', type=u'md5')]\n"
      ]
     }
    ],
@@ -212,16 +223,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "732d394e3b58fcf9ae5531b9f8d8ad43\n",
-      "670b61d2b86b2090060eff38872a45e9\n",
-      "False\n"
+      "17b0e94c31294d25b8788ef3132693e7\n",
+      "17b0e94c31294d25b8788ef3132693e7\n",
+      "True\n"
      ]
     }
    ],
@@ -258,24 +269,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'data_objects' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-817869c4dadd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mfile_sizes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfile_size\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdata_objects\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_sizes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbins\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m96\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtitle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"n = {}, {} GB total, mean {} GB\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_sizes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_sizes\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m1000000000.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_sizes\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_sizes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m1000000000.0\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0myscale\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'symlog'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'data_objects' is not defined"
-     ]
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYoAAAEVCAYAAAD+TqKGAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAG5VJREFUeJzt3X3YZXVd7/H3B3AgAUGZyQQGB3VAB1L0IJRpUmAOktCD\nGpiPoYZc6KnMAssi7ZTplcdjYkpHHB9BpMxRQLpSOWBi8aARiOQEIww+oCBPaiL4PX+sdcNiz33/\n7s3cj3Pzfl3XvuZe67fWb333b6+1vuv3W2vvSVUhSdJUtlnoACRJi5uJQpLUZKKQJDWZKCRJTSYK\nSVKTiUKS1GSikBZIknVJ/nyh45Cms+gTRZL9k5yX5DtJNvvSR5Lzk/x3kjv619WDskckWZ/k60kq\nyaqRddcluXOw7h1Jth0zrt9Nck2S2/r6/3eS7Qblb0zyH0nuSnJyo57T+tgeM5i3Ksk5Sb6b5JtJ\n3jGse5I6XpXk2j6WS5I8dVC2fZJ3JflWkpuTfCLJHuNuK8mzk1zRt83nk6wZlCXJnye5Icmt/Wex\n30hshyW5LMn3kmxK8rxJ4n9R3wYvm6RsWZKrkmya6v33y+2c5K1JNvbbui7JWUkOHixTfdkd/f50\nepJdG3VuTHJYa7szWX4pSPLiJJf2+96mJG+eZl89oF/++/2/BwzKzh05Fu9M8h8j617Y72ubkrx+\nim38Sf9ZHzaYd+VI3Xcl+cQk6262LyY5OcmPRtZ/VF/2tJH5d/Tr/3pf3jxG0jgH9fv+Wf1+VUkO\nGePzeEaSzya5PclNSb6U5A+T7DDFe7lqItaWRZ8ogB8BZwLHNpY5oap26l/7Dub/GPgU0GqINw/W\n3amq7h4zrvXAk6rqIcD+wBOAVw/KNwB/AJw9VQXpTuiPnqToncCNwCOAA4CnA8dPUcfBwJuA5wC7\nAO8BPpZ7E97/BH4WeDywO/Bd4G/G2VaS1cCHgOOAXYFPAOsHJ4LnAr8FPA14GHAR8IFBbGuADwN/\n1Mf2BODSkfgfCrwOuHKy9we8Fvj2FGUTdWwPfAb4aeCXgYcAjwPOAA4fWfwJVbUT8CjgocDJrbo1\nrQcDvwMsBw4GDgV+f7IFkywDPg58kK7t3wd8vJ9PVR0+PBaBzwMfHVTxYeACun3t6cDxSY4c2caj\n6fbLbwznV9V+g3p3Bq4fqXu6ffEjI+eJa/p6LxyJ+ZeBO+jOOzDNMdJrnYM+B7wA+OYkMd1HkucC\nZ9G10yOrajfgN4A9gZWTvRe6z+6DSR7erLyqtvgFbKTbKS4HbgU+Auwwkzob23pMF+5m888HXjbN\nutsBBawamb8O+PNZiG034J+Bd05S9kHg5Cli+iLdCbyAxwzKrgKeNZh+C/DuKbb9G8C/DaZ37Ot7\nRD/9t3Q74kT5EcDV42wLOAE4e1C2DfAD4NB++g+BMwfl+wH/PZj+MPDGadruXXSJabPPEdi7j+9w\nYFOjjpfRnRh2nGZbo+18PPBPUyz7AboLjR/QHfh/0M8/ku5Ecksf8+OmWf6jdAf5rXQnuf22ZP/r\nl30ncG5f/78APwW8jS75fwV44mD53YG/p0uy1wKvHpQdRHfCuqVvt3cAy0ba6Tjgq/0ypwAZM87f\nAz4xRdkvATcM6wKuA9ZOsuwq4G4GxyzwfWDNYPqjwEkj630KeBbduemwKeJ4OnD76P4y1b5IdzHx\nwTHf/3uB9w6mpztGxtoHgE3AIY3y0CW/10xTz2bvhe5C8Smt9WajR/E8YC3dQf144CWTLZTkqUlu\nabyeOtl6Y/rLfijhX8bpno04Pt2QzKXjdMGGkjw/yW3Ad+iult99P1b/XeCCqrp8krK3AUcneXC6\nYaLDufcKZdS5wLZJDu57Eb8FfIl7r0DeA/xckt2TPBj4zX6dcbeVkb9D14OC7or90Un2SfIg4MUj\n6/4MQLohuG8k+WCSh91TWXIQcCDdATqZv6G7wvvBFOUTDgPOq6rvTbPcvW+ku3r8FeALk5VX1Qvp\nTmLPru7q681J9gFOp7sKWwGcA3wiybLJlu+rOhdYDfwkcBldD21LPQ/4Y7qr9x/Snewv66fPAt7a\nv7dt6Hp//w7sQXeV/ztJntnXczfd/recrrd5KJv3WH8ZeDLdMf084JmM5+eZune4H3B59Wen3uX9\n/FEvAi6sqo2DeW8DXpTkQUn27WP/54nC/or6h1V1zjQxvhj4++H+Msa++Oz+PHFlkldOtkCSHel6\n9u8bzJ7uGIEZnIMG9qXrOfz9uCv0w2JHAMuALzcXHidLNrLTRuAFg+k3A++aSZ2NbU3VoziYriu5\nPd2HcDvw6JFlpupRPImuN7Ad3VXI7cDPbUFsq4E3Aj81SdlmPQq6buAGYJd+evRK93F0QzR39WXr\nmOKKju7E/Tq6Ibq76JLWkwflu9DtrNWXfxF42DjbAh4LfA84pN+ZXk931XxSX74M+D+Duq8F9h7U\nfWe/j+wD7ES3E3+oL9sWuAT4mX76fO57FferwLn934fQ7lH8M/CmwfQBdFfCt3Hf3lP1826hO1l+\nBdhjmv37sMH067nv1eE2dFfIh0y2/CT17drHMPG5r+P+9Sj+bjD9KuCqwfRPA7cMjonrRtY/icGV\n7kjZ7wAfG2mnpw6mzwROHCPG36K78l0+RfnrgTNG5n2IyXvcG4CXjMx7Sj9/Yl/9s0HZznQ9oFWt\nz4JuqOw2BlfnY+yLa+h6aNv2MXwDOGaSul9IdwwMe0zTHSNjnYOYvkfx1H4bOwzmndHv698HXtjP\nO5nuuLyF7ti+m77323rNRo9iOHb2fboTwrypqn+tqtur6odV9T66Lvmzxlz3sqq6qaruqu4q5EPA\nr21BDF+lu4p655irvA14Q1XdOlrQXw1+CvgHumGk5XTjuX81RV3HAi+luypbRjee+ckku/flp9Al\n0d36+v6Bvkcx3baq6it0yfcddAfHcrorj4kby39Cd9W5EtgB+DPgM33PBbqewHur6j+r6g7gL7j3\nszme7upysyv6/srszdz3nk/LTXT3WOjj/lJV7Ur3WW4/suyT+rId6IblLpy40TeG3YGvDbbzY7ru\n/h6TLZxk2yRvSvJffc9zY1+0fMztjfrW4O8fTDI9cew9Eth92GOnu5h4eB/XPkk+me7hhdvoPpfR\nmO7XcZ3kV4C/BA6vqu9MsdgddPePhh5Cd3Ic1vVUumG1swbzHka3r76B7rNbCTwzyURP6GTgA3Xf\nHshkfg24Gfh/g3lT7osAVfXlqvp6Vd1dVZ+nO/E/Z5JFXwy8v/ozcq95jMzWOYjuGID7HgdH9/v6\nZXRJbsKZVbVrVe1Id4/0RUl+u1X5vN3MzuRPBwxfT5ulTRX3HS6Zr3W3Y/Ib05M5FHhLf6BOHJAX\nJXk+3Q2vvYB39MnvJrpxz6mS3wHAJ/uT8Y+r6lN0J/WnDMrXVdXNVfVDuuGcg5IsH2dbVXVWVe1f\n3Y2xP6UbO754UPdHqmpTv6Ovo0s0E09GXU7XpvdUN9IGvzpog6cAf53kHXQ9tFV0J/Fv0iWyR/TL\nrpqkDT4N/FKfYMZSVT8C/i/dkOn+Uy02Mv11upMw0HXd6U4AN0yx/POBo+iGxnahe0+w5fvYuK4H\nru1PBhOvnatq4nP9W7re1OrqHsZ43UxiSrIW+Du6Ybf/aCx6JfD4vt0mPJ7Nh6peDPxDf3Ex4VHA\n3VX1/n5f20R3xTzxng4FXj3Yn1YCZyb5w0nqHj2Zt/bFyWx2nkiykq7n+/6RZac7Rqate0xX0+2H\n9yvJ9In1XODZreXmLVHUyNMBk7wunGy9fhxtB7qrZZLs0D/lQpJdkzyzn7ddkt+kGyP91GD9Hbj3\nqnL74dVjkuck2SnJNkl+ie5qfP2gfMpH0pK8LMlP9n+voevaf3pQ/qB+W9sA2/UxTmT1fejuaRzQ\nv6D7oD7WX41dC7yyf0+70u3ck93LgO6kfUSSR/Vt9Yy+/isG5S9Ksks/Rno88PWq+s4420ryP/or\n4xXAqcD6vqcxUfdzkzy8b8MXAg+iGx6ALum8tI/twcCJwCf7spfQDXtNtMEldFdbf9THvnJQ9jK6\nq+cD6E6Co95Plxw/lu5x6m37tj9wijaj/yxeSnclfs0Ui32L7gQ14Uy6tj60b8vX0N0r+PwUy+/c\nl99EN+TxF1PF08c01iOQY/g34PZ0j0X+RN8e+yd58iCu24A7kjwWmHTMfRxJfpHuKvjXq+rfpln8\nfLqhjlene2z7hH7+Zwb1/QTdPZF1I+v+Z1ec5/f72k/RPcgxsa8eSpfwJ/aZrwO/Tdejnqh7T+AX\nuO89BGjviyQ5KslD++PrILqe7sdH6ngh8Pmq+q+R+c1jZIxz0PCctaw/j2yWSPre7WuAP03y8kG8\nq+l7kpPp22QtU99XumcDW/xi8zHckxnz6YD7sY1VdFl2+NrYl63oP4jb6cbcvgA8Y2T90XVrUHYh\n3dMot9Hd+Dt6ULayn7/bFHG9l+7E8L2+Hd7CfccH102y7ZdMUdfoPYoD6A6q79LdczgTePig/A7g\naf3foeuOX9e3w1X045F9+W50B/KNfRt9Djjofmzrc329N9PdrN9xULYD3YH4jb6tLmPkCRa6A+7b\n/esDwEOnaIPzmeLpNaa5R9EvswvdkN7X+s/ka3T3RIbvtfqyO/p4Lwae2ajzqL5dbwF+v5/3q3TD\nb7fSDV/sN9XydMM1H+/b72t0N2jv+awZ3KMYY3+7Z9l++mXA+YPpxwB3DaZ3p7vx/s3+s/0C/bFK\ndzH1lb4dLuz3n8819sf7bHskrs/Sjb3fMXidOyg/F3jdYPqJdPfEftDvL08cqe+Yvq02uycH/GL/\nmd3av6+/Ax48zrmpn3cS3Q3y6c4599kX+3a8qX9vX2HwBNlgma8Ax04yv3mM0DgHDd7H6HlkVSP2\ntf1+eUcf8xfpHjHfsS8/me5+5sRn9Q26G/iTtuPEa+KmpUYkeQHdSeCkhY5FS5/7mxYzE4UkqWlr\n+Ga2JGkBmSgkSU0mCklS05S/8jifli9fXqtWrVroMCRpq3LppZd+p6pWzPV2FkWiWLVqFZdccslC\nhyFJW5UkX5t+qZlz6EmS1GSikCQ1mSgkSU0mCklSk4lCktRkopAkNZkoJElNJgpJUpOJQpLUtCi+\nmT0Tq048+56/N77piAWMRJKWJnsUkqQmE4UkqWnWE0WSxyV5V5Kzkmzxf9ouSVocxkoUSU5LcmOS\nK0bmr01ydZINSU4EqKqrquo44HnAz81+yJKk+TRuj2IdsHY4I8m2wCnA4cAa4Jgka/qyI4GzgXNm\nLVJJ0oIYK1FU1QXAzSOzDwI2VNU1VXUncAZwVL/8+qo6HPjNqepM8ookX03y7euuu27LopckzbmZ\n3KPYA7h+ML0J2CPJIUnenuTdNHoUVXVqVa2uqhV77bXXDMKQJM2lWf8eRVWdD5w/2/VKkhbGTHoU\nNwArB9N79vMkSUvITBLFxcDqJHsnWQYcDayfnbAkSYvFuI/Hng5cBOybZFOSY6vqLuAE4DzgKuDM\nqrpy7kKVJC2Ese5RVNUxU8w/Bx+BlaQlzZ/wkCQ1mSgkSU0mCklSk4lCktRkopAkNZkoJElNJgpJ\nUpOJQpLUZKKQJDWZKCRJTSYKSVKTiUKS1GSikCQ1mSgkSU0mCklSk4lCktRkopAkNZkoJElNJgpJ\nUpOJQpLUZKKQJDWZKCRJTSYKSVKTiUKS1GSikCQ1mSgkSU0mCklSk4lCktRkopAkNZkoJElNJgpJ\nUpOJQpLUZKKQJDWZKCRJTSYKSVKTiUKS1GSikCQ1mSgkSU0mCklSk4lCktRkopAkNZkoJElN281F\npUl+BTgCeAjwnqr6p7nYjiRp7o3do0hyWpIbk1wxMn9tkquTbEhyIkBV/WNVvRw4DviN2Q1ZkjSf\n7s/Q0zpg7XBGkm2BU4DDgTXAMUnWDBb5475ckrSVGjtRVNUFwM0jsw8CNlTVNVV1J3AGcFQ6fwWc\nW1WXzV64kqT5NtOb2XsA1w+mN/XzXgUcBjwnyXGTrZjkFUm+muTb11133QzDkCTNlTm5mV1Vbwfe\nPs0ypwKnAhx44IE1F3FIkmZupj2KG4CVg+k9+3mSpCViponiYmB1kr2TLAOOBtbPPCxJ0mJxfx6P\nPR24CNg3yaYkx1bVXcAJwHnAVcCZVXXl3IQqSVoIY9+jqKpjpph/DnDOrEUkSVpU/AkPSVKTiUKS\n1GSikCQ1mSgkSU0mCklSk4lCktRkopAkNZkoJElNJgpJUpOJQpLUZKKQJDWZKCRJTSYKSVKTiUKS\n1GSikCQ1mSgkSU0mCklSk4lCktRkopAkNZkoJElNJgpJUpOJQpLUZKKQJDWZKCRJTSYKSVKTiUKS\n1GSikCQ1mSgkSU0mCklS03YLHcDWaNWJZ9/z98Y3HbGAkUjS3LNHIUlqMlFIkppMFJKkJu9RzBHv\nY0haKuxRSJKaTBSSpCaHnmbIISZJS52JYgrDBAAmAUkPXA49SZKaTBSSpCaHnsY0OhQ1W3U5pCVp\nsbNHIUlqMlFIkppmPVEkeVSS9yQ5a7brliTNv7ESRZLTktyY5IqR+WuTXJ1kQ5ITAarqmqo6di6C\nlSTNv3F7FOuAtcMZSbYFTgEOB9YAxyRZM6vRSZIW3FhPPVXVBUlWjcw+CNhQVdcAJDkDOAr48jh1\nJnkF8Fpg1xUrVowb75yazSeb5qNeSZoPM7lHsQdw/WB6E7BHkt2SvAt4YpKTplq5qk6tqtVVtWKv\nvfaaQRiSpLk069+jqKqbgONmu15J0sKYSaK4AVg5mN6zn/eAtSVDTH75TtJiN5Ohp4uB1Un2TrIM\nOBpYPzthSZIWi3Efjz0duAjYN8mmJMdW1V3ACcB5wFXAmVV15dyFKklaCOM+9XTMFPPPAc6Z1Ygk\nSYuKP+EhSWoyUUiSmvyZ8SXEJ6gkzQV7FJKkJhOFJKnJoadFZJyhI383StJ8s0chSWoyUUiSmkwU\nkqQm71E8wPlIraTp2KOQJDWZKCRJTSYKSVKTiUKS1OTN7EVqNr9YN+4Na29sS5qMPQpJUpOJQpLU\nZKKQJDWZKCRJTSYKSVKTiUKS1OTjsVoURh8H9vFcafGwRyFJajJRSJKaTBSSpCYThSSpyUQhSWoy\nUUiSmkwUkqQmE4UkqWlJfeGu9X84TPUFrtn8fx8Wk5m+L/9vCkkT7FFIkppMFJKkJhOFJKnJRCFJ\najJRSJKaTBSSpCYThSSpyUQhSWoyUUiSmkwUkqQmE4UkqclEIUlqMlFIkppMFJKkJhOFJKnJRCFJ\najJRSJKaTBSSpCYThSSpyUQhSWoyUUiSmkwUkqQmE4UkqclEIUlqMlFIkpq2m+0Kk+wIvBO4Ezi/\nqj4029uQJM2fsXoUSU5LcmOSK0bmr01ydZINSU7sZ/8acFZVvRw4cpbjlSTNs3GHntYBa4czkmwL\nnAIcDqwBjkmyBtgTuL5f7O7ZCVOStFDGShRVdQFw88jsg4ANVXVNVd0JnAEcBWyiSxZj1y9JWrxm\nco9iD+7tOUCXIA4G3g68I8kRwCemWjnJK4DXAruuWLFiBmGMZ9WJZ9/z98Y3HTHn21tKhm03NG47\nTtX2U9U7l7HMh9nc1xZrXXNl9PNdrHHOxNb4Hmf9ZnZVfQ946RjLnQqcCnDggQfWbMchSZodMxka\nugFYOZjes58nSVpCZpIoLgZWJ9k7yTLgaGD97IQlSVosxn089nTgImDfJJuSHFtVdwEnAOcBVwFn\nVtWVcxeqJGkhjHWPoqqOmWL+OcA5sxqRJGlR8fFVSVKTiUKS1GSikCQ1mSgkSU0mCklSk4lCktRk\nopAkNZkoJElNJgpJUpOJQpLUZKKQJDWZKCRJTSYKSVKTiUKS1GSikCQ1mSgkSU0mCklSk4lCktRk\nopAkNZkoJElNJgpJUtOsJ4oka5NcnWRDkhNnu35J0vya1USRZFvgFOBwYA1wTJI1s7kNSdL8SlXN\nXmXJzwInV9Uz++mTAKrqLydZ9hXAa4FdgZ2AK7dws8uB72zhukuFbWAbgG3wQHz/j6yqFXO9ke1m\nub49gOsH05uAgydbsKpOBU6d6QaTXFJVB860nq2ZbWAbgG3wQH//c8mb2ZKkptlOFDcAKwfTe/bz\nJElbqdlOFBcDq5PsnWQZcDSwfpa3MWrGw1dLgG1gG4Bt8EB//3NmVm9mAyR5FvA2YFvgtKr6X7O6\nAUnSvJr1RCFJWlq8mS1JatpqEsV03/hOsn2Sj/Tl/5pk1fxHObfGaIPfS/LlJJcn+XSSRy5EnHNp\n3G/+J/n1JJVkST0uOc77T/K8fj+4MsmH5zvGuTbGcbBXks8m+WJ/LDxrIeJcUqpq0b/o7nf8F/Ao\nYBnw78CakWWOB97V/3008JGFjnsB2uAXgAf3f7/ygdgG/XI7AxcAXwAOXOi453kfWA18EXhoP/2T\nCx33ArTBqcAr+7/XABsXOu6t/bW19CgOAjZU1TVVdSdwBnDUyDJHAe/r/z4LODRJ5jHGuTZtG1TV\nZ6vq+/3kF+geT15KxtkPAN4I/BXw3/MZ3DwY5/2/HDilqr4LUFU3znOMc22cNijgIf3fuwBfn8f4\nlqStJVFM9o3vPaZapqruAm4FdpuX6ObHOG0wdCxw7pxGNP+mbYMkTwJWVtXZ8xnYPBlnH9gH2CfJ\nvyT5QpK18xbd/BinDU4GXpBkE3AO8Kr5CW3pmu2f8NAikOQFwIHA0xc6lvmUZBvgrcBLFjiUhbQd\n3fDTIXQ9yguS/HRV3bKgUc2vY4B1VfXX/e/PfSDJ/lX144UObGu1tfQoxvnG9z3LJNmOrst507xE\nNz/G+tZ7ksOAPwKOrKofzlNs82W6NtgZ2B84P8lG4GeA9UvohvY4+8AmYH1V/aiqrgX+ky5xLBXj\ntMGxwJkAVXURsAPdDwZqC20tiWKcb3yvB17c//0c4DPV381aIqZtgyRPBN5NlySW2tg0TNMGVXVr\nVS2vqlVVtYruPs2RVXXJwoQ768Y5Dv6RrjdBkuV0Q1HXzGeQc2ycNrgOOBQgyePoEsW35zXKJWar\nSBT9PYcTgPOAq4Azq+rKJG9IcmS/2HuA3ZJsAH4PWFL/adKYbfAWup9s/2iSLyWZ659PmVdjtsGS\nNeb7Pw+4KcmXgc8Cr62qJdOzHrMNXgO8PMm/A6cDL1liF43zzm9mS5KatooehSRp4ZgoJElNJgpJ\nUpOJQpLUZKKQpDmS5LQkNya5Yoxlfz7JZUnuSvKckbJPJbklySfnLtqpmSgkae6sA8b9GZXr6H5V\nYLJf/H0L8MLZCen+M1FI0hypqguAm4fzkjy67yFcmuTCJI/tl91YVZcDm/3USFV9Grh9XoKehL/1\nJEnz61TguKr6apKDgXcCv7jAMTWZKCRpniTZCXgK3a8nTMzefuEiGo+JQpLmzzbALVV1wEIHcn94\nj0KS5klV3QZcm+S5AOk8YYHDmpa/9SRJcyTJ6XS/5rsc+Bbwp8BngL8FHgE8CDijqt6Q5MnAx4CH\n0v3vjN+sqv36ei4EHkv3o583AcdW1Xnz9j5MFJKkFoeeJElNJgpJUpOJQpLUZKKQJDWZKCRJTSYK\nSVKTiUKS1PT/AY/Bh+yhpgNMAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7fa6b603d4d0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "file_sizes = [float(x.file_size) for x in data_objects]\n",
+    "file_sizes = [float(x.size) for x in data_objects]\n",
     "plt.hist(file_sizes, bins=96)\n",
     "plt.title(\"n = {}, {} GB total, mean {} GB\".format(len(file_sizes), str(sum(file_sizes) / 1000000000.0), (sum(file_sizes) / len(file_sizes)) / 1000000000.0 ))\n",
     "plt.yscale('symlog')\n",
@@ -316,16 +326,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "93e75792-4e71-43be-91d1-c69c461b567f\n",
-      "670b61d2b86b2090060eff38872a45e9\n",
-      "d64983aa044c72e05b8e0e61e3f1b64c\n"
+      "33ff00a8-87fd-4c0a-9bea-8024f5257a81\n",
+      "17b0e94c31294d25b8788ef3132693e7\n",
+      "cf7c1e22b0426059acab93cbe0645547\n"
      ]
     }
    ],
@@ -349,14 +359,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7121dc9f-c8a4-436a-b4c4-c3c7fa58b5dc\n"
+      "10311cb8-0569-4dec-a263-138a0f394643\n"
      ]
     }
    ],
@@ -383,14 +393,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[u'93e75792-4e71-43be-91d1-c69c461b567f', u'0723954e-37b4-4a04-bd58-c685962b8a78', u'cfc60287-61ff-4631-a318-b0ad49a06c11', u'7d8c060a-f616-4a7c-963a-5aa237b040a0', u'6c57b1e9-a5b2-49ac-96a8-c5d090dd9cb1', u'6e5774ac-10aa-40b9-b901-b0776c3a1b33', u'76abc4c9-7977-447e-9bc3-8b06a1417682', u'07758321-c528-4760-aec0-269470c5be35', u'33942f1a-cf23-4545-8110-f767c623c721', u'8176bc53-925e-47ff-8eb7-ccd1e5612d60']\n"
+      "[u'33ff00a8-87fd-4c0a-9bea-8024f5257a81', u'38f7de46-0e26-4f7e-bd76-0972cff8175e', u'e2b03c4a-bb71-4afa-ab86-d7243bca84a8', u'e36b3ac1-2d01-436a-88fe-5a88cff14a38', u'da07a798-73e4-4c2e-b1dc-558206750c80', u'9184e71b-fbfd-42f3-bb76-256fbce6c230', u'1e061265-2d0e-4b2d-93f6-fc8736f4178c', u'c1ac87f1-2464-44b4-a7f7-fed5e3dd2214', u'71f94630-e3ab-43ed-8901-49a401dc9f42', u'3ea489d2-7744-47ec-a88e-28f5a76f7355']\n"
      ]
     }
    ],
@@ -398,13 +408,20 @@
     "get_bundle_response = client.GetDataBundle(data_bundle_id=create_response.data_bundle_id).result()\n",
     "print(get_bundle_response.data_bundle.data_object_ids)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env2",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "env2"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
