Address doc review comments

--- a/python/examples/gdc_notebook.ipynb
+++ b/python/examples/gdc_notebook.ipynb
@@ -69,7 +69,7 @@
    ],
    "source": [
     "ListDataObjectsRequest = models.get_model('ListDataObjectsRequest')\n",
-    "list_request = client.ListDataObjects(body=ListDataObjectsRequest(page_size=10000000))\n",
+    "list_request = client.ListDataObjects(page_size=10000000)\n",
     "list_response = list_request.result()\n",
     "print(\"Number of Data Objects: {} \".format(len(list_response.data_objects)))"
    ]
