Update notebook for endpoint refactor

--- a/python/examples/object-type-examples.ipynb
+++ b/python/examples/object-type-examples.ipynb
@@ -99,7 +99,7 @@
     }
    ],
    "source": [
-    "c.ListDataObjects(body={}).result()"
+    "c.ListDataObjects().result()"
    ]
   },
   {
@@ -418,7 +418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do_1kg = c1kg.ListDataObjects(body={}).result().data_objects[0]"
+    "do_1kg = c1kg.ListDataObjects().result().data_objects[0]"
    ]
   },
   {
@@ -493,7 +493,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdc_do = cgdc.client.ListDataObjects(body={}).result().data_objects[0]"
+    "gdc_do = cgdc.client.ListDataObjects().result().data_objects[0]"
    ]
   },
   {
@@ -711,7 +711,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
