--- a/python/examples/gdc_notebook.ipynb
+++ b/python/examples/gdc_notebook.ipynb
@@ -314,7 +314,7 @@
    "source": [
     "We can now organize some of the Data Objects into a bundle so we can share them together. \n",
     "\n",
-    "For example, a few publicly available items. First, we have to gather the list of data objects and compute their concatenated hash."
+    "For example, a few publicly available items. First, we have to gather the list of Data Objects and compute their concatenated hash."
    ]
   },
   {
