--- a/python/examples/object-type-examples.ipynb
+++ b/python/examples/object-type-examples.ipynb
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now create an simple data object representing a file."
+    "We can now create an simple Data Object representing a file."
    ]
   },
   {
