--- a/docs/asciidoc/front_matter.adoc
+++ b/docs/asciidoc/front_matter.adoc
@@ -1,11 +1,41 @@
 == Executive Summary
 
-The Data Repository Service (DRS) API provides a generic API on top of existing object storage systems so workflow systems can access data in a single, standard way regardless of where it's stored.
+The Data Repository Service (DRS) API provides a generic interface to data repositories so data consumers, including workflow systems, can access data in a single, standard way regardless of where it's stored and how it's managed.
 
-Key features of the API:
+== Motivation
 
-* **Data Object management**, which enables the creation, updating, deletion, versioning, and unique identification of files and data bundles (flat collections of files)
-* **Data Object querying**, which can locate data objects across different cloud environments and DRS implementations.
+[cols="40a,60a"]
+|===
+|Data sharing requires portable data, consistent with the FAIR data principles (findable, accessible, interoperable, reusable). Today’s researchers and clinicians are surrounded by potentially useful data, but often need bespoke tools and processes to work with each dataset. And today’s data publishers don’t have a reliable way to make their data useful to all (and only) the people they choose.
+|image::figure1.png[] 
+_Figure 1: there’s an ocean of data, with many different tools to drink from it, but no guarantee that any tool will work with any subset of the data_
+|===
+
+[cols="40a,60a"]
+|===
+|We need a standard way for data producers to make their data available to data consumers, that supports the control needs of the former and the access needs of the latter. And we need it to be interoperable, so anyone who builds access tools and systems can be confident they'll work with all the data out there, and anyone who publishes data can be confident it will work with all the tools out there.
+|image::figure2.png[]
+_Figure 2: by defining a standard Data Repository API, and adapting tools to use it, every data publisher can now make their data useful to every data consumer_
+|===
+
+
+[cols="75a,25a"]
+|===
+
+|We envision a world where:
+
+* there are many many **data consumers**, working in research and in care, who can use the tools of their choice to access any all data that they have permission to see
+* there are many **data access tools** and platforms, supporting discovery, visualization, analysis, and collaboration
+* there are many **data repositories**, each with their own policies and characteristics, which can be accessed by a variety of tools 
+* there are many **data publishing tools** and platforms, supporting a variety of data lifecycles and formats
+* there are many many **data producers**, generating data of all types, who can use the tools of their choice to make their data as widely available as is appropriate
+
+|image::figure3.png[]  
+_Figure 3: a standard Data Repository API enables an ecosystem of data producers and consumers_
+|===
+
+This spec defines a standard **Data Repository Service (DRS) API** (“the yellow box”), to enable that ecosystem of data producers and consumers. Our goal is that all data consumers need to know about a data repo is "here's the DRS endpoint to access it", and all data publishers need to know about tapping into the world of consumption tools is "here's how to tell it where my DRS endpoint lives".
+
 
 == Introduction
 
