--- a/docs/asciidoc/index.adoc
+++ b/docs/asciidoc/index.adoc
@@ -2,3 +2,4 @@ include::{generated}/overview.adoc[]
 include::front_matter.adoc[]
 include::{generated}/paths.adoc[]
 include::{generated}/definitions.adoc[]
+include::back_matter.adoc[]
