--- a/docs/asciidoc/front_matter.adoc
+++ b/docs/asciidoc/front_matter.adoc
@@ -1,59 +1,41 @@
-== Executive Summary
-
-The Data Repository Service (DRS) API provides a generic interface to data repositories so data consumers, including workflow systems, can access data in a single, standard way regardless of where it's stored and how it's managed.
-
-== Motivation
-
-[cols="40a,60a"]
-|===
-|Data sharing requires portable data, consistent with the FAIR data principles (findable, accessible, interoperable, reusable). Today’s researchers and clinicians are surrounded by potentially useful data, but often need bespoke tools and processes to work with each dataset. And today’s data publishers don’t have a reliable way to make their data useful to all (and only) the people they choose.
-|image::figure1.png[] 
-_Figure 1: there’s an ocean of data, with many different tools to drink from it, but no guarantee that any tool will work with any subset of the data_
-|===
-
-[cols="40a,60a"]
-|===
-|We need a standard way for data producers to make their data available to data consumers, that supports the control needs of the former and the access needs of the latter. And we need it to be interoperable, so anyone who builds access tools and systems can be confident they'll work with all the data out there, and anyone who publishes data can be confident it will work with all the tools out there.
-|image::figure2.png[]
-_Figure 2: by defining a standard Data Repository API, and adapting tools to use it, every data publisher can now make their data useful to every data consumer_
-|===
-
-
-[cols="75a,25a"]
-|===
-
-|We envision a world where:
-
-* there are many many **data consumers**, working in research and in care, who can use the tools of their choice to access any all data that they have permission to see
-* there are many **data access tools** and platforms, supporting discovery, visualization, analysis, and collaboration
-* there are many **data repositories**, each with their own policies and characteristics, which can be accessed by a variety of tools 
-* there are many **data publishing tools** and platforms, supporting a variety of data lifecycles and formats
-* there are many many **data producers**, generating data of all types, who can use the tools of their choice to make their data as widely available as is appropriate
-
-|image::figure3.png[]  
-_Figure 3: a standard Data Repository API enables an ecosystem of data producers and consumers_
-|===
-
-This spec defines a standard **Data Repository Service (DRS) API** (“the yellow box”), to enable that ecosystem of data producers and consumers. Our goal is that all data consumers need to know about a data repo is "here's the DRS endpoint to access it", and all data publishers need to know about tapping into the world of consumption tools is "here's how to tell it where my DRS endpoint lives".
-
-
 == Introduction
 
-This document describes the DRS API and provides details on the specific endpoints, request formats, and response.  It is intended to provide key information for developers of DRS-compatible services as well as clients that will call these DRS services.
+The Data Repository Service (DRS) API provides a generic interface to data repositories so data consumers, including workflow systems, can access data in a single, standard way regardless of where it's stored and how it's managed. This document describes the DRS API and provides details on the specific endpoints, request formats, and response.  It is intended for developers of DRS-compatible services and of clients that will call these DRS services.
 
-Use cases include:
+The primary functionality of DRS is to map a logical ID to a means for physically retrieving the data represented by the id. The sections below describe the characteristics of those IDs, the types of data supported, and how the mapping works.
 
-* GET of resource ID and return JSON metadata describing object
-* GET of resource ID and return JSON with URLs for data read access.
-* GET of resources by alias
-* Bundles of multiple objects
-* Versioning of objects (and bundles if supported)
+== DRS API Principles
 
-== Standards
+
+=== DRS IDs
+
+Each implementation of DRS can choose its own id scheme, as long as it follows these guidelines:
+
+* DRS Ids are URL-safe text strings made up of alphanumeric characters and any of [.-_/]
+* One DRS ID MUST always return same bytes (or, in the case of a collection, the same contents). This constraint aids with reproducibility.
+( DRS does NOT support semantics around multiple versions of an object. For example, there’s no notion of “get latest version” or “list all versions” in DRS v1. Individual implementation MAY choose an ID scheme that includes version hints.
+* DRS implementations MAY have more than one ID that maps to the same object.
+
+=== DRS Datatypes
+
+DRS v1 supports two datatypes:
+
+* Blobs -- these are file-like objects
+* Collections -- these are sets of other DRS objects (either Blobs or Collections)
+
+=== Read-only
+
+DRS v1 is a read-only API. We expect that each implementation will define its own mechanisms and interfaces (graphical and/or programmatic) for adding and updating data.
+
+=== URI convention (WORK IN PROGRESS)
+
+For convenience, we define a recommended syntax for fully referencing DRS-accessible objects. Strings of the form drs://<server>/<id> mean “make a DRS call to the HTTP address at <server>, passing in the DRS id <id>, to retrieve the object”. For example, these strings are useful when passing objects to a WES server for processing. 
+
+=== Standards
 
 The DRS API specification is written in OpenAPI and embodies a RESTful service philosophy.  It uses JSON in requests and responses and standard HTTP/HTTPS for information transport.
 
-== Authorization & Authentication
+== Authorization & Authentication (WORK IN PROGRESS)
 
 Users must supply credentials that establish their identity and authorization in order to use a DRS endpoint. We recommend that DRS implementations use an OAuth2 https://oauth.net/2/bearer-tokens/[bearer token], although they can choose other mechanisms if appropriate. DRS callers can use the `auth_instructions_url` from the https://ga4gh.github.io/workflow-execution-service-schemas/#/WorkflowExecutionService/GetServiceInfo[service-info endpoint] to learn how to obtain and use a bearer token for a particular implementation.
 
