adding a note about 1.0.0 and transition from DOS

--- a/docs/asciidoc/front_matter.adoc
+++ b/docs/asciidoc/front_matter.adoc
@@ -4,6 +4,11 @@ The Data Repository Service (DRS) API provides a generic interface to data repos
 
 The primary functionality of DRS is to map a logical ID to a means for physically retrieving the data represented by the ID. The sections below describe the characteristics of those IDs, the types of data supported, and how the mapping works.
 
+**NOTE**: this document represents a work in progress towards DRS 1.0.0.  It may not be fully in sync
+with the OpenAPI schema since both are being worked on.  The 0.0.1 release represents the
+schema as it existed at the time of the transition from the DOS to DRS name and is subject to
+change as we evolve it to a DRS 1.0.0.
+
 == DRS API Principles
 
 === DRS IDs
@@ -28,7 +33,7 @@ DRS v1 is a read-only API. We expect that each implementation will define its ow
 
 === URI convention (WORK IN PROGRESS)
 
-For convenience, we define a recommended syntax for fully referencing DRS-accessible objects. Strings of the form drs://<server>/<id> mean “make a DRS call to the HTTP address at <server>, passing in the DRS id <id>, to retrieve the object”. For example, these strings are useful when passing objects to a WES server for processing. 
+For convenience, we define a recommended syntax for fully referencing DRS-accessible objects. Strings of the form drs://<server>/<id> mean “make a DRS call to the HTTP address at <server>, passing in the DRS id <id>, to retrieve the object”. For example, these strings are useful when passing objects to a WES server for processing.
 
 === Standards
 
