--- a/docs/asciidoc/front_matter.adoc
+++ b/docs/asciidoc/front_matter.adoc
@@ -20,7 +20,7 @@ Each implementation of DRS can choose its own id scheme, as long as it follows t
 DRS v1 supports two types of content:
 
 * an `Object` is like a file -- it's a single blob of bytes
-* a `Bundle` is like a folder -- it's collection of other DRS content (either objects or bundles)
+* a `Bundle` is like a folder -- it's a collection of other DRS content (either objects or bundles)
 
 === Read-only
 
